* doc/BUILD.md: Add link to detailed test information.
* test/pi_*.cpp: Add large pi(x) computation test.
* test/pi_deleglise_rivat.cpp: Add 128-bit tests.
* test/pi_gourdon.cpp: Add 128-bit tests.
* test/alpha_deleglise_rivat.cpp: Add 128-bit tests.
* test/alpha_y_gourdon.cpp: Add 128-bit tests.
* test/alpha_z_gourdon.cpp: Add 128-bit tests.

Changes in primecount-7.8, 2023-03-27

I fixed the pi(-n) crash yesterday for 64-bit integers. Unfortunately
I forgot to fix the same issue for 128-bit integers. Hence this
release fixes the same issue for 128-bit integers.

* api.cpp: Add missing check for negative numbers in pi(int128_t x),
           pi_deleglise_rivat(int128_t x), pi_gourdon(int128_t x).
* test/api.cpp: Add more pi(-n) tests.
* test/api_c.cpp: Add more primecount_pi(-n) tests.
* test/pi_cache.cpp: Add new test.
* test/pi_deleglise_rivat.cpp: Add new test.
* test/pi_gourdon.cpp: Add new test.
* test/pi_legendre.cpp: Add new test.
* test/pi_lmo5.cpp: Add new test.
* test/pi_lmo_parallel.cpp: Add new test.
* test/pi_meissel.cpp: Add new test.
* CMakeLists.txt: Disable building libprimesieve examples.

Changes in primecount-7.7, 2023-03-26

This is a bug fix release.

* primecount.h: Fix -Wstrict-prototypes warning.
* api.cpp: Fix pi(-1) crash #64. Now pi(-1) returns 0
           without reporting any error.
* test/api.cpp: Add pi(-1) test.
* test/api_c.cpp: Add primecount_pi(-1) test.
* test/nthprime.cpp: Add new test.
* test/api_c.c: Convert api_c.cpp to api_c.c

Changes in primecount-7.6, 2022-12-07

This is a bug fix release.

There is a missing header include in primecount-7.5 (in print.hpp)
which may cause the build to fail when compiling with C++17 or later.
This e.g. caused the build of primecount-7.5 to fail on Fedora-39
i686. This issue has been fixed in primecount-7.6, there are no other
changes. The API and ABI of primecount-7.6 are backwards compatible
with primecount-7.*

* print.hpp: Add missing <string_view> header.
